--- a/src/index.css
+++ b/src/index.css
@@ -35,11 +35,17 @@ html {
   font-weight: bold !important;
 }
 
-.cart-widget :hover {
-  color: lightgreen !important;
-}
-
 .product-card {
   height: 600px;
   width: 400px;
+}
+
+.empty-cart-container {
+  align-self: center;
+  margin-top: 3rem;
+  height: 500px;
+  width: 30%;
+  background-color: whitesmoke;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
