--- a/src/index.css
+++ b/src/index.css
@@ -66,26 +66,26 @@ html {
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  margin-top: 2rem;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   height: 80%;
   width: 100%;
-  background-color: blue;
 }
 
 .form-container {
+  padding: 10px;
   height: 100%;
   width: 65%;
-  background-color: red;
+  border-radius: 8px;
+  background-color: rgb(15 23 42);
 }
 
 .detail-container {
+  padding: 10px;
   height: 100%;
   width: 30%;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  background-color: yellow;
+  background-color: rgb(15 23 42);
+  display: flex;
+  flex-direction: column;
 }
 
 .detail-product {
