--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ html {
 .detail-purchase-container {
   margin: 2rem;
   padding: 10px;
-  height: 600px;
+  height: auto;
   width: 90%;
   background-color: whitesmoke;
   border-radius: 8px;
@@ -72,8 +72,8 @@ html {
 
 .form-container {
   padding: 10px;
-  height: 100%;
   width: 65%;
+  height: 400px;
   border-radius: 8px;
   background-color: rgb(15 23 42);
 }
