--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ html {
   margin: 2rem;
   padding: 10px;
   height: auto;
-  width: 90%;
+  width: 70%;
   background-color: whitesmoke;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -66,7 +66,7 @@ html {
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  height: 80%;
+  height: 100%;
   width: 100%;
 }
 
@@ -75,7 +75,10 @@ html {
   width: 65%;
   height: 400px;
   border-radius: 8px;
-  background-color: rgb(15 23 42);
+  background-color: whitesmoke;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .detail-container {
@@ -83,9 +86,10 @@ html {
   height: 100%;
   width: 30%;
   border-radius: 8px;
-  background-color: rgb(15 23 42);
+  background-color: whitesmoke;
   display: flex;
   flex-direction: column;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .detail-product {
