--- a/src/index.css
+++ b/src/index.css
@@ -56,9 +56,7 @@ html {
   padding: 10px;
   height: auto;
   width: 70%;
-  background-color: whitesmoke;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .data-container {
@@ -75,10 +73,11 @@ html {
   width: 65%;
   height: 400px;
   border-radius: 8px;
-  background-color: whitesmoke;
+  background-color: lightgreen;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .detail-container {
@@ -86,7 +85,7 @@ html {
   height: 100%;
   width: 30%;
   border-radius: 8px;
-  background-color: whitesmoke;
+  background-color: lightgreen;
   display: flex;
   flex-direction: column;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
