--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,7 @@ html {
   width: 65%;
   height: 400px;
   border-radius: 8px;
-  background-color: lightgreen;
+  background-color: whitesmoke;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -85,10 +85,12 @@ html {
   height: 100%;
   width: 30%;
   border-radius: 8px;
-  background-color: lightgreen;
+  background-color: whitesmoke;
+  min-height: 400px;
   display: flex;
   flex-direction: column;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  justify-content: space-between;
 }
 
 .detail-product {
