cambios detalle de compra

--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@ html {
 
 .data-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   padding: 10px;
   height: 100%;
